# deterministic-observability-framework

./: dof.constitution.yml  pyproject.toml  requirements.txt
core/: ast_verifier.py  crew_runner.py  governance.py  link_validator.py
tests/: test_ast_verifier.py  test_governance_rules.py
